--- a/ga4gh/templates/index.html
+++ b/ga4gh/templates/index.html
@@ -9,6 +9,9 @@
             <h3>Protocol version {{ info.getProtocolVersion() }}</h3>
         </div>
         <div>
+            <h3>Session Token {{ session['key']}}</h3>
+        </div>
+        <div>
             <h3>Operations available</h3>
             <table>
                 <th>Method</th>
