--- a/ga4gh/templates/index.html
+++ b/ga4gh/templates/index.html
@@ -9,7 +9,7 @@
             <h3>Protocol version {{ info.getProtocolVersion() }}</h3>
         </div>
         <div>
-            <h3>Session Token {{ session['key']}}</h3>
+            <h3>Session Token {{ request.cookies['session'] }}</h3>
         </div>
         <div>
             <h3>Operations available</h3>
